# cmake-template

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config.h  config.h.in
MathFunctions/: CMakeLists.txt  MakeTable.cpp  mysqrt.cpp
src/: main.cpp
